# notify-server

./: .dockerignore  .editorconfig  .env.example  .env.terraform-example  .env.terraform.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile-dev  README.md  cog.toml  deny.toml  docker-compose.notify-server.yml  docker-compose.storage.yml  docker-compose.yml  justfile  package.json  renovate.json
.cargo/: config.toml
.github/: SECRETS.md  codeowners
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: cd.yml  ci.yml  ci_terraform.yml  deploy-infra.yml  dispatch_deploy.yaml  dispatch_deploy.yml  dispatch_deploy_dev.yaml  dispatch_publish.yaml  dispatch_publish.yml  dispatch_validate.yaml  dispatch_validate.yml  event_intake.yml  event_pr.yaml  event_pr.yml  event_release.yaml  event_release.yml  release.yml  sub-app-check.yml  sub-app-deploy.yml  sub-cd.yml  sub-ci.yml  sub-infra-apply.yml  sub-infra-check.yml  sub-infra-plan.yml  sub-publish-image.yml  sub-validate-health.yml  sub-validate-rust.yml  sub-validate-swift.yml  sub-validate.yml  validate.yml  validate_swift.yml
integration/: integration.test.ts
migrations/: 1669387640_create_example_table.sql  1695070521_init.sql  20231018121518_init.sql  20231025145134_add_notification.sql  20231026150926_add_notification_trigger.sql  20240103051259_welcome_notification.sql  20240111200929_unique_account_address.sql  20240123221209_index-where-status-queued.sql  20240227222554_index_subscription_watcher_account.sql  20240319001421_is_read.sql  20240417170201_notification_metadata.sql  ERD.md  README.md  new.sh
src/: auth.rs  config.rs  error.rs  extractors.rs  jsonrpc.rs  lib.rs  log.rs  main.rs  metrics.rs  migrate.rs  notify_keys.rs  notify_message.rs  publish_relay_message.rs  rate_limit.rs  registry.rs  relay_client_helpers.rs  rpc.rs  spec.rs  state.rs  types.rs  unregister_service.rs  utils.rs  watcher_expiration.rs  wsclient.rs
src/analytics/: client_info.rs  follow_notification_link.rs  get_notifications.rs  mark_notifications_as_read.rs  message_info.rs  mod.rs  notification_link.rs  notify_client.rs  notify_message.rs  relay_request.rs  subscriber_notification.rs  subscriber_update.rs
src/config/: local.rs  mod.rs
src/config/deployed/: mod.rs
src/handlers/: did_json.rs  get_subscribers.rs  get_subscribers_v0.rs  get_subscribers_v1.rs  health.rs  metrics.rs  mod.rs  notify.rs  notify_v0.rs  notify_v1.rs  register.rs  subscribe_topic.rs
src/handlers/webhooks/: delete_webhook.rs  get_webhooks.rs  mod.rs  register_webhook.rs  update_webhook.rs
src/model/: helpers.rs  types.rs
src/model/types/: account_id.rs  mod.rs
src/model/types/account_id/: caip10.rs  eip155.rs  erc55.rs  mod.rs
src/publisher_service/: mod.rs  worker.rs
src/rate_limit/: mod.rs  token_bucket.lua  token_bucket.rs
src/registry/: extractor.rs  mod.rs
src/registry/storage/: error.rs  mod.rs
src/registry/storage/redis/: mod.rs
src/services/: batch_receive_service.rs  mod.rs  relay_mailbox_clearing_service.rs  watcher_expiration.rs  watcher_expiration_job.rs
src/services/handlers/: notify_v0.rs  notify_v1.rs  subscribe_topic.rs
src/services/private_http/: mod.rs
src/services/private_http_server/: mod.rs
src/services/public_http/: health.rs  mod.rs
src/services/public_http/handlers/: mod.rs  notify_v0.rs  notify_v1.rs
src/services/public_http_server/: mod.rs
src/services/public_http_server/handlers/: did_json.rs  follow_notification_link.rs  get_subscribers_v0.rs  get_subscribers_v1.rs  get_welcome_notification.rs  health.rs  mark_all_as_read.rs  mod.rs  notification_link.rs  notify_v0.rs  notify_v1.rs  post_welcome_notification.rs  relay_webhook.rs  subscribe_topic.rs
src/services/publisher_service/: helpers.rs  metrics.rs  mod.rs  types.rs  worker.rs
src/services/relay_renewal_job/: mod.rs  refresh_topic_subscriptions.rs  register_webhook.rs
src/services/websocket_server/: error.rs  mod.rs  relay_ws_client.rs
src/services/websocket_server/handlers/: mod.rs  notify_delete.rs  notify_get_notifications.rs  notify_subscribe.rs  notify_update.rs  notify_watch_subscriptions.rs
src/services/websocket_service/: mod.rs
src/services/websocket_service/handlers/: notify_delete.rs  notify_subscribe.rs  notify_update.rs  notify_watch_subscriptions.rs
src/siwe/: erc5573.rs  mod.rs
src/siwx/: erc5573.rs  mod.rs  notify_recap.rs
src/storage/: mod.rs
src/storage/redis/: mod.rs
src/stores/: example.rs  mod.rs
src/types/: mod.rs  notification.rs
src/websocket_service/: mod.rs
src/websocket_service/handlers/: mod.rs  notify_delete.rs  notify_subscribe.rs  notify_update.rs  notify_watch_subscriptions.rs  push_delete.rs  push_subscribe.rs  push_update.rs
terraform/: .terraform-docs.yml  .terraform.lock.hcl  .tflint.hcl  README.md  backend.tf  context.tf  deploy-dev.sh  docdb.tf  inputs.tf  main.tf  network.tf  outputs.tf  provider.tf  res_alerting.tf  res_application.tf  res_db.tf  res_dns.tf  res_monitoring.tf  res_network.tf  res_redis.tf  terraform.tf  variables.tf
terraform/alerting/: README.md  alarms_docdb.tf  alarms_elb.tf  main.tf  variables.tf
terraform/docdb/: README.md  main.tf  network.tf  outputs.tf  password.tf  terraform.tf  variables.tf
terraform/ecs/: README.md  analytics.tf  cluster.tf  cluster_iam.tf  cluster_logs.tf  iam.tf  main.tf  network.tf  outputs.tf  terraform.tf  variables.tf
terraform/monitoring/: README.md  dashboard.jsonnet  dashboard.tf  data_sources.tf  main.tf  outputs.tf  terraform.tf  variables.tf
terraform/monitoring/panels/: panels.libsonnet
terraform/postgres/: README.md  main.tf  outputs.tf  variables.tf
terraform/redis/: README.md  outputs.tf
terraform/vars/: dev.tfvars  prod.tfvars  staging.tfvars
tests/: deployment.rs  deployment.rs_  functional.rs  integration.rs  storage.rs
tests/context/: mod.rs  server.rs
tests/functional/: mod.rs
tests/handler/: health.rs  mod.rs  notify.rs  register.rs
tests/utils/: http_api.rs  mod.rs  notify_relay_api.rs  relay_api.rs
(+68 files in other folders)
