[package]
name = "cast-server"
version = "0.14.0"
edition = "2021"
authors = [
    "Maciej Rak <raku@walletconnect.com>"
]
build = "build.rs"

[dependencies]
wc = { git = "https://github.com/WalletConnect/utils-rs.git", tag = "v0.1.0", features = ["full"] }

tokio = { version = "1", features = ["full"] }
axum = { version = "0.6", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["trace", "cors"] }
hyper = "0.14"

# Database
mongodb = "2.3.1"

# Seralisation
serde_json = "1.0.91"
serde = { version = "1.0", features = ["derive"] }
serde_bson = "0.0.1"

# Env Vars
dotenv = "0.15"
envy = "0.4"

# Metrics & Traces
prometheus-core = { package = "prometheus", version = "0.13" }


# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "parking_lot"] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.19"
atty = "0.2"
log = "0.4"


# Analytics
parquet = { git = "https://github.com/WalletConnect/arrow-rs.git", rev = "99a1cc3", default-features = false, features = ["flate2"] }
parquet_derive = { git = "https://github.com/WalletConnect/arrow-rs.git", rev = "99a1cc3" }
gorgon = { git = "https://github.com/WalletConnect/gorgon.git", tag = "v0.5.1" }


aws-config = "0.55"
aws-sdk-s3 = "0.25"

# Encoding
base64 = "0.21.0"
hex = "0.4.3"
bs58 = "0.4.0"

# Misc
build-info = "0.0"
thiserror = "1.0"
async-trait = "0.1"
tokio-stream = "0.1.11"
regex = "1.7.1"
tungstenite = {version = "0.18.0", features =["native-tls"] }
url = "2.3.1"
sha256 = "1.1.1"
chacha20poly1305 = "0.10.1"
ed25519-dalek = "1.0.1"
rand = "0.7.0"
rand_core = "0.5.0"
ring = "0.16.20"
jsonwebtoken = "8.2.0"
data-encoding = "2.3.3"
chrono = { version = "0.4.23", features = ["serde"] }
derive_more = "0.99.17"
futures = "0.3.26"
async-tungstenite = {version = "0.20.0", features = ["tokio", "tokio-native-tls"]}
dashmap = "5.4.0"

relay_rpc = { git = "https://github.com/WalletConnect/WalletConnectRust.git", rev = "5f4dd3cbf4a67e40c47503706f8e0ae8d8bdd435", features = ["cacao"]}
relay_client = { git = "https://github.com/WalletConnect/WalletConnectRust.git", rev = "5f4dd3cbf4a67e40c47503706f8e0ae8d8bdd435" }
x25519-dalek = { version = "2.0.0-rc.2" , features = ["static_secrets"]}
hkdf = "0.12.3"
sha2 = "0.10.6"
uuid = { version= "1.3.1", features = ["serde", "v4"] }

reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0.71"
pnet_datalink = "0.33.0"
ipnet = "2.8.0"
once_cell = "1.18.0"
lazy_static = "1.4.0"

[dev-dependencies]
test-context = "0.1"

[build-dependencies]
build-info-build = "0.0"


