[package]
name = "notify-server"
version = "0.13.4"
publish = false
edition = "2021"
authors = ["Chris Smith <chris@walletconnect.com>"]
build = "build.rs"

[dependencies]
wc = { git = "https://github.com/WalletConnect/utils-rs.git", tag = "v0.7.0", features = ["full"] }
cerberus = { git = "https://github.com/WalletConnect/cerberus.git", tag = "v0.9.1" }

tokio = { version = "1", features = ["full"] }
axum = { version = "0.6", features = ["json", "headers"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["trace", "cors"] }
hyper = "0.14"

# Seralisation
serde_json = "1.0.91"
serde = { version = "1.0", features = ["derive"] }
serde_bson = "0.0.1"

# Env Vars
dotenv = "0.15"
envy = "0.4"

# Metrics & Traces
prometheus-core = { package = "prometheus", version = "0.13" }


# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "parking_lot",
] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.19"
atty = "0.2"


# Analytics
parquet = { git = "https://github.com/WalletConnect/arrow-rs.git", rev = "99a1cc3", default-features = false, features = [
    "flate2",
] }
parquet_derive = { git = "https://github.com/WalletConnect/arrow-rs.git", rev = "99a1cc3" }

aws-config = "0.56"
aws-sdk-s3 = "0.31"

# Encoding
base64 = "0.21.0"
hex = "0.4.3"
bs58 = "0.4.0"

# Misc
build-info = "0.0"
thiserror = "1.0"
async-trait = "0.1"
tokio-stream = "0.1.11"
regex = "1.7.1"
tungstenite = { version = "0.18.0", features = ["native-tls"] }
url = "2.3.1"
sha256 = "1.1.1"
chacha20poly1305 = "0.10.1"
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
rand = "0.7.0"
rand_core = "0.5.0"
ring = "0.16.20"
jsonwebtoken = "8.2.0"
data-encoding = "2.3.3"
chrono = { version = "0.4.23", features = ["serde"] }
derive_more = "0.99.17"
futures = "0.3.26"
async-tungstenite = { version = "0.20.0", features = [
    "tokio",
    "tokio-native-tls",
] }
dashmap = "5.4.0"

relay_rpc = { git = "https://github.com/WalletConnect/WalletConnectRust.git", rev = "54ce4be", features = ["cacao"] }
relay_client = { git = "https://github.com/WalletConnect/WalletConnectRust.git", rev = "54ce4be" }
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
hkdf = "0.12.3"
sha2 = "0.10.6"
uuid = { version = "1.3.1", features = ["serde", "v4"] }

reqwest = { version = "0.11", features = ["json"] }
pnet_datalink = "0.33.0"
ipnet = "2.8.0"
once_cell = "1.18.0"
lazy_static = "1.4.0"
rmp-serde = "1.1.1"
deadpool-redis = "0.12.0"
rand_chacha = "0.3.1"
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
wiremock = "0.5.19"
itertools = "0.11.0"
sha3 = "0.10.8"
validator = { version = "0.16.1", features = ["derive"] }

[dev-dependencies]
k256 = "0.13.1"
test-context = "0.1"

[build-dependencies]
build-info-build = "0.0"

# [patch.'https://github.com/WalletConnect/WalletConnectRust.git']
# relay_rpc = { path = "../WalletConnectRust/relay_rpc" }
# relay_client = { path = "../WalletConnectRust/relay_client" }
