[package]
name = "notify-server"
version = "0.29.11"
publish = false
edition = "2021"
authors = ["Chris Smith <chris@walletconnect.com>"]
build = "build.rs"

[dependencies]
wc = { git = "https://github.com/WalletConnect/utils-rs.git", tag = "v0.10.0", features = ["full"] }
#cerberus = { git = "https://github.com/WalletConnect/cerberus.git", tag = "v0.9.1" }

tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.5", features = ["json"] }
axum-core = "0.4.3"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace", "cors", "request-id", "util"] }
hyper = "1.3.0"

# Seralisation
serde_json = "1.0.115"
serde = { version = "1.0", features = ["derive"] }
#serde_bson = "0.0.1"

# Env Vars
dotenvy = "0.15"
envy = "0.4"

# Metrics & Traces
prometheus-core = { package = "prometheus", version = "0.13" }


# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "parking_lot",
] }
#tracing-appender = "0.2"
#tracing-opentelemetry = "0.19"


# Analytics
parquet = { git = "https://github.com/WalletConnect/arrow-rs.git", rev = "99a1cc3", default-features = false, features = [
    "flate2",
] }
parquet_derive = { git = "https://github.com/WalletConnect/arrow-rs.git", rev = "99a1cc3" }

aws-config = "1.2.0"
aws-sdk-s3 = "1.23.0"

# Encoding
base64 = "0.21.0"
hex = "0.4.3"
bs58 = "0.4.0"

# Misc
build-info = "0.0"
thiserror = "1.0"
async-trait = "0.1"
tokio-stream = "0.1.15"
regex = "1.10.4"
url = { version = "2.5.0", features = ["serde"] }
sha256 = "1.5.0"
chacha20poly1305 = "0.10.1"
rand = "0.8.5"
ring = "0.16.20"
jsonwebtoken = "8.3.0"
data-encoding = "2.5.0"
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = "0.99.17"
futures = "0.3.30"
futures-util = "0.3"
dashmap = "5.5.3"

relay_rpc = { git = "https://github.com/WalletConnect/WalletConnectRust.git", tag = "v0.29.3", features = ["cacao"] }
relay_client = { git = "https://github.com/WalletConnect/WalletConnectRust.git", tag = "v0.29.3" }
blockchain_api = { git = "https://github.com/WalletConnect/WalletConnectRust.git", tag = "v0.29.3" }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
hkdf = "0.12.4"
sha2 = "0.10.8"
uuid = { version = "1.3.1", features = ["serde", "v4"] }

reqwest = { version = "0.12.3", features = ["json"] }
pnet_datalink = "0.34.0"
ipnet = "2.9.0"
once_cell = "1.19.0"
rmp-serde = "1.1.2"
deadpool-redis = "0.12.0"
redis = { version = "0.23.3", default-features = false, features = ["script"] }
rand_chacha = "0.3.1"
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
wiremock = "0.6.0"
itertools = "0.11.0"
sha3 = "0.10.8"
validator = { version = "0.17.0", features = ["derive"] }
k256 = "0.13.3"

[dev-dependencies]
test-context = "0.3"

[build-dependencies]
build-info-build = "0.0"

# [patch.'https://github.com/WalletConnect/WalletConnectRust.git']
# relay_rpc = { path = "../WalletConnectRust/relay_rpc" }
# relay_client = { path = "../WalletConnectRust/relay_client" }
# blockchain_api = { path = "../WalletConnectRust/blockchain_api" }

# [patch.'https://github.com/WalletConnect/utils-rs.git']
# wc = { path = "../utils-rs" }
